--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://gabrieldl.github.io/",
+  "homepage": "https://gabrieldl.github.io/gabrieldl.github.io/",
   "name": "gabrieldl.github.io",
   "version": "0.1.0",
   "private": true,
